# cmake-project-template

./: .clangd  CMakeLists.txt  LICENSE  README.md
cmake/: common_opt.cmake
src/: main.c
